# angos

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build.rs  config.example.toml  renovate.json
.github/: renovate-global.json5
.github/workflows/: build.yaml  docs.yaml  renovate.yaml
conformance/: config-fs-memory-variable-parts.toml  config-fs-redis-variable-parts.toml  config-fs-redis.toml  config-s3-cas-uniform-parts.toml  config-s3-cas-variable-parts.toml  config-s3-lock.toml  config-s3-memory-uniform-parts.toml  config-s3-memory-variable-parts.toml  config-s3-redis-uniform-parts.toml  config-s3-redis-uniform.toml  config-s3-redis-variable-parts.toml  config-s3.toml  conformance-variables
conformance/e2e/: README.md  overlay-cache.toml  overlay-push.toml  overlay-replication-a.toml  overlay-replication-b.toml
contrib/docker-compose/: docker-compose.yaml
crates/backoff/: Cargo.toml
crates/backoff/src/: lib.rs
crates/conformance-gates/: Cargo.toml
crates/conformance-gates/src/: angos.rs  error.rs  gates.rs  main.rs  registry.rs  seed.rs  store.rs
crates/s3-client/: Cargo.toml
crates/s3-client/src/: circuit_breaker.rs  client.rs  config.rs  error.rs  lib.rs  ops.rs  test_util.rs  xml.rs
crates/storage/: Cargo.toml
crates/storage/src/: conditional.rs  error.rs  lib.rs  memory.rs  multipart.rs  object.rs  pagination.rs  presigned.rs  test_util.rs  tests.rs  types.rs  upload_session.rs
crates/storage/src/fs/: mod.rs  tests.rs
crates/storage/src/s3/: mod.rs  range_scan.rs  tests.rs  upload_session.rs
crates/tx-engine/: Cargo.toml
crates/tx-engine/src/: error.rs  executor.rs  intent.rs  janitor.rs  lib.rs  periodic.rs  probe.rs  recovery.rs  store.rs  test_util.rs  transaction.rs
crates/tx-engine/src/executor/: cas.rs  common.rs  locked.rs
crates/tx-engine/src/lock/: metrics.rs  mod.rs  primitive.rs
crates/tx-engine/src/lock/storage/: memory.rs  mod.rs  redis.rs  s3.rs
crates/tx-engine/tests/: chaos.rs  coarse_lock.rs  manifest_blob_data_race.rs  merge_set.rs  prepare_concurrency.rs  property.rs  recovery_takeover.rs  session_release_ordering.rs
crates/tx-engine/tests/common/: mod.rs
doc/: index.md
doc/explanation/: architecture.md  authentication-authorization.md  pull-through-caching.md  replication.md  security-model.md  storage-backends.md
doc/how-to/: configure-event-webhooks.md  configure-generic-oidc.md  configure-github-actions-oidc.md  configure-mtls.md  configure-replication.md  configure-retention-policies.md  configure-webhook-authorization.md  deploy-docker-compose.md  deploy-kubernetes.md  durable-cache-jobs.md  enable-web-ui.md  protect-tags-immutability.md  run-storage-maintenance.md  set-up-access-control.md  troubleshoot-common-issues.md  upgrade.md
doc/reference/: api-endpoints.md  cel-expressions.md  cli.md  configuration.md  event-webhooks.md  metrics.md  ui.md
doc/tutorials/: mirror-docker-hub.md  quickstart.md  your-first-private-registry.md
src/: circuit_breaker.rs  http_client.rs  main.rs  metrics_provider.rs  secret.rs  timing.rs  watcher.rs
src/auth/: authenticator.rs  authorization.rs  authorizer.rs  error.rs  mod.rs  mtls.rs
src/auth/authorizer/: mod.rs  tests.rs
src/auth/basic_auth/: mod.rs  tests.rs
src/auth/oidc/: jwk.rs  mod.rs  validator.rs
src/auth/webhook/: authorizer.rs  cache.rs  config.rs  headers.rs  metrics.rs  mod.rs  tests.rs  tls.rs
src/cache/: config.rs  error.rs  memory.rs  mod.rs  redis.rs  stub.rs  tests.rs
src/cache_fill/: mod.rs
src/cache_fill/handler/: mod.rs  tests.rs
src/command/: bootstrap.rs  maintenance.rs  mod.rs
src/command/argon/: error.rs  mod.rs
src/command/maintenance/: categorize.rs  error.rs  executor.rs  mod.rs  walk.rs
src/command/migrate/: error.rs  mod.rs
src/command/policy/: command.rs  mod.rs
src/command/prune/: checker.rs  mod.rs  orphan_jobs.rs  orphan_namespaces.rs  uploads.rs
src/command/replicate/: checker.rs  mod.rs
src/command/replication/: command.rs  mod.rs
src/command/scrub/: action.rs  categorize.rs  command.rs  context.rs  error.rs  executor.rs  mod.rs  node.rs  raw_sweep.rs  report.rs  scheduler.rs  scrub_lock.rs  setup.rs  sweep_sink.rs  walk.rs
src/command/server/: command.rs  error.rs  http_server.rs  mod.rs  request_ext.rs  response.rs  response_body.rs  router.rs  server_context.rs  ui.rs
src/command/worker/: command.rs  mod.rs  runner.rs
src/configuration/: error.rs  global.rs  listeners.rs  metadata_resolver.rs  mod.rs  observability.rs  regex_pattern.rs  registry_storage.rs  server.rs  tests.rs  trusted_proxy.rs  ui.rs  validate.rs  watcher.rs
src/configuration/listeners/: insecure.rs  mod.rs  tls.rs
src/event_webhook/: config.rs  dispatcher.rs  event.rs  mod.rs  subscriber.rs
src/identity/: action.rs  client_identity.rs  mod.rs  route.rs
src/jobs/: mod.rs  runner.rs  store.rs  store_tests.rs
src/oci/: constants.rs  descriptor.rs  digest.rs  error.rs  manifest.rs  media_type.rs  mod.rs  namespace.rs  reference.rs  tag.rs  upload_session_id.rs
src/policy/: access_policy.rs  cel_rule.rs  clock.rs  error.rs  mod.rs  retention_policy.rs
src/registry/: admin.rs  blob.rs  blob_ownership.rs  cache_job_handler.rs  content_discovery.rs  error.rs  event_emission_tests.rs  ext.rs  fs_ops.rs  headers.rs  job_runner.rs  job_store.rs  job_store_tests.rs  key_classifier.rs  manifest.rs  mod.rs  pagination.rs  path_builder.rs  repository.rs  repository_resolver.rs  s3_connection.rs  task_queue.rs  test_utils.rs  tests.rs  upload.rs  version.rs
src/registry_client/: auth.rs  bearer_token.rs  error.rs  http_client.rs  mod.rs  tests.rs  upstream_url.rs  write.rs
src/replication/: config.rs  downstream.rs  error.rs  handler.rs  mod.rs  origin.rs  pipeline.rs  wire.rs
src/s3_client/: client.rs  config.rs  mod.rs  ops.rs  xml.rs
src/test_fixtures/: client.rs  configuration.rs  events.rs  logging.rs  mocks.rs  mod.rs  mtls.rs  oidc.rs  requests.rs  tls.rs  webhook.rs
src/util/: sha256.rs
ui/: package-lock.json  package.json
ui/src/: app.css
website/: package-lock.json  package.json
(+254 files in other folders)
