[package]
name = "angos"
version = "1.2.0"
edition = "2024"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"

[dependencies]
arc-swap = "1.9.1"
argh = "0.1.19"
argon2 = "0.5.3"
async-trait = "0.1.89"
base64 = "0.22.1"
bytes = "1.11.1"
bytesize = { version = "2.3.1", features = ["serde"] }
cel-interpreter = "0.10"
chrono = { version = "0.4.44", features = ["serde"] }
futures-util = { version = "0.3.32", default-features = false }
hex = "0.4.3"
http-body = "1.0.1"
http-body-util = "0.1.3"
hmac = "0.13.0"
humantime = "2.3"
hyper = { version = "1.9" , features = ["full"]}
hyper-util = { version = "0.1.20", features = ["tokio", "server-graceful"] }
jsonwebtoken = { version = "10.4.0", features = ["aws_lc_rs"] }
md-5 = "0.11"
mime_guess = "2.0.5"
notify = "8.2"
opentelemetry = "0.32.0"
opentelemetry_sdk = { version = "0.32.0", features = ["rt-tokio", "metrics"] }
opentelemetry-otlp = { version = "0.32.0" , features = ["grpc-tonic"]}
parking_lot = "0.12.5"
password-hash = { version = "0.5", features = ["getrandom"] }
prometheus = "0.14"
quick-xml = "0.38"
redis = { version = "1.2.1", features = ["tokio-comp"] }
regex = "1.12.3"
reqwest = { version = "0.13.3", default-features = false, features = ["rustls", "stream", "json"] }
rpassword = "7.5.2"
rust-embed = "8.11"
rustls = { version = "0.23.40", default-features = false, features = ["aws-lc-rs", "logging", "std", "tls12"] }
rustls-pki-types = "1.14.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_urlencoded = "0.7.1"
sha2 = "0.11.0"
smallvec = "1.15"
tempfile = "3.27"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full", "tracing"] }
tokio-rustls = "0.26.4"
tokio-util = { version = "0.7.18", features = ["io-util", "rt"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-opentelemetry = { git = "https://github.com/tokio-rs/tracing-opentelemetry", rev = "44521fa43c79989cdfb5b7244d5f1afadef6dd7e" }
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
ulid = "1.2"
url = { version = "2.5.8", features = ["serde"] }
uuid = { version = "1.23.1", features = ["v4", "serde"] }
x509-parser = "0.18.1"
zeroize = { version = "1.8.2", features = ["derive"] }

[dev-dependencies]
wiremock = "0.6.5"
rcgen = { version = "0.14.8", default-features = false, features = ["pem", "ring"] }
p256 = { version = "0.13.2", features = ["ecdsa", "pem", "jwk"] }
opentelemetry_sdk = { version = "0.32.0", features = ["testing"] }
