[workspace]
members = [
    "crates/backoff",
    "crates/conformance-gates",
    "crates/s3-client",
    "crates/storage",
    "crates/tx-engine",
]

# Policy: every dependency used by two or more workspace members is declared
# here (version plus the features every user shares); members reference it
# with `workspace = true` and add only member-specific features. Dependencies
# used by a single member stay in that member's manifest.
[workspace.dependencies]
angos-backoff = { path = "crates/backoff" }
angos-s3-client = { path = "crates/s3-client" }
angos-storage = { path = "crates/storage" }
angos-tx-engine = { path = "crates/tx-engine" }
argh = "0.1.19"
async-trait = "0.1.91"
base64 = "0.23.0"
bytes = "1.12.1"
bytesize = "2.4.2"
chrono = { version = "0.4.45", features = ["serde"] }
futures-util = { version = "0.3.33", default-features = false }
hex = "0.4.3"
hmac = "0.13.0"
md-5 = "0.11"
parking_lot = "0.12.5"
quick-xml = "0.41.0"
redis = { version = "1.4.1", features = ["tokio-comp"] }
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "stream"] }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
sha2 = "0.11.0"
smallvec = "1.15.2"
tempfile = "3.27"
thiserror = "2.0.19"
tokio = "1.53.1"
tokio-util = { version = "0.7.19", features = ["io-util"] }
tracing = "0.1.44"
tracing-opentelemetry = "0.33"
url = "2.5.8"
uuid = { version = "1.24.0", features = ["v4"] }
wiremock = "0.6.5"

[package]
name = "angos"
version = "1.4.1"
edition = "2024"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"

[dependencies]
angos-backoff = { workspace = true }
angos-s3-client = { workspace = true }
angos-storage = { workspace = true }
angos-tx-engine = { workspace = true, features = ["redis"] }
arc-swap = "1.9.2"
argh = { workspace = true }
argon2 = "0.5.3"
async-trait = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
bytesize = { workspace = true, features = ["serde"] }
cel-interpreter = "0.10"
chrono = { workspace = true }
futures-util = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
http-body = "1.1.0"
http-body-util = "0.1.4"
humantime = "2.4.0"
hyper = { version = "1.11.0", features = ["full"] }
hyper-util = { version = "0.1.20", features = ["tokio", "server-graceful"] }
jsonwebtoken = { version = "11.0.0", features = ["aws_lc_rs"] }
md-5 = { workspace = true }
mime_guess = "2.0.5"
notify = "8.2"
opentelemetry = "0.32.0"
opentelemetry_sdk = { version = "0.32.1", features = ["rt-tokio", "metrics"] }
opentelemetry-otlp = { version = "0.32.0", features = ["grpc-tonic"] }
parking_lot = { workspace = true }
# Stays on 0.5 in lockstep with argon2: this dep exists to enable the
# `getrandom` feature on the password-hash instance argon2 re-exports, which
# requires both to resolve to the same crate version.
password-hash = { version = "0.6.1", features = ["getrandom"] }
prometheus = "0.14"
quick-xml = { workspace = true }
redis = { workspace = true }
regex = "1.13.1"
reqwest = { workspace = true, features = ["json"] }
rpassword = "7.5.4"
rust-embed = "8.12.0"
rustls = { version = "0.23.42", default-features = false, features = ["aws-lc-rs", "logging", "std", "tls12"] }
rustls-pki-types = "1.15.1"
serde = { workspace = true }
serde_html_form = "0.4.1"
serde_json = { workspace = true }
sha2 = { workspace = true }
smallvec = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full", "tracing"] }
tokio-rustls = "0.26.4"
tokio-util = { workspace = true, features = ["rt"] }
toml = "1.1.3"
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
url = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["serde"] }
x509-parser = "0.18.1"
zeroize = { version = "1.9.0", features = ["derive"] }

[dev-dependencies]
angos-s3-client = { workspace = true, features = ["test-util"] }
angos-storage = { workspace = true, features = ["test-util"] }
opentelemetry_sdk = { version = "0.32.1", features = ["testing"] }
p256 = { version = "0.14.0", features = ["ecdsa", "pem"] }
rcgen = { version = "0.14.8", default-features = false, features = ["pem", "ring"] }
wiremock = { workspace = true }
