[package]
name = "angos-s3-client"
version = "0.1.0"
edition = "2024"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

[dependencies]
async-trait = "0.1.89"
base64 = "0.22.1"
bytes = "1.11.1"
bytesize = { version = "2.3.1", features = ["serde"] }
chrono = { version = "0.4.44", features = ["serde"] }
futures-util = { version = "0.3.32", default-features = false }
hex = "0.4.3"
hmac = "0.13.0"
md-5 = "0.11"
parking_lot = "0.12.5"
quick-xml = "0.38"
reqwest = { version = "0.13.3", default-features = false, features = ["rustls", "stream", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
smallvec = "1.15"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["io-util", "sync", "time"] }
tokio-util = { version = "0.7.18", features = ["io-util"] }
tracing = "0.1.44"
url = "2.5.8"

[dev-dependencies]
tokio = { version = "1.52.3", features = ["io-util", "sync", "time", "macros", "rt", "rt-multi-thread"] }
wiremock = "0.6.5"
