[package]
name = "angos-s3-client"
version = "0.1.0"
edition = "2024"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

[features]
test-util = []

[dependencies]
angos-backoff = { path = "../backoff" }
base64 = "0.22.1"
bytes = "1.12.0"
bytesize = { version = "2.4.0", features = ["serde"] }
chrono = { version = "0.4.45", features = ["serde"] }
futures-util = { version = "0.3.32", default-features = false }
hex = "0.4.3"
hmac = "0.13.0"
md-5 = "0.11"
parking_lot = "0.12.5"
quick-xml = "0.40"
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.11.0"
smallvec = "1.15"
tokio = { workspace = true, features = ["io-util", "sync", "time"] }
tokio-util = { version = "0.7.18", features = ["io-util"] }
tracing = "0.1.44"
url = "2.5.8"

[dev-dependencies]
tokio = { workspace = true, features = ["io-util", "sync", "time", "macros", "rt", "rt-multi-thread"] }
wiremock = { workspace = true }
