[package]
name = "angos-s3-client"
version = "0.1.0"
edition = "2024"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

[features]
test-util = []

[dependencies]
angos-backoff = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
bytesize = { workspace = true, features = ["serde"] }
chrono = { workspace = true }
futures-util = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
md-5 = { workspace = true }
parking_lot = { workspace = true }
quick-xml = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
smallvec = { workspace = true }
tokio = { workspace = true, features = ["io-util", "sync", "time"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["io-util", "sync", "time", "macros", "rt", "rt-multi-thread"] }
wiremock = { workspace = true }
