[package]
name = "angos-storage"
version = "0.1.0"
edition = "2024"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

[dependencies]
angos-s3-client = { path = "../s3-client" }
async-trait = "0.1.89"
bytes = "1.11.1"
chrono = { version = "0.4.44", features = ["serde"] }
futures-util = { version = "0.3.32", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
tempfile = "3.27"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["fs", "io-util", "rt", "sync"] }
tokio-util = { version = "0.7.18", features = ["io-util", "rt"] }
tracing = "0.1.44"

[dev-dependencies]
bytesize = "2.3.1"
serde_json = "1.0.149"
tempfile = "3.27"
tokio = { version = "1.52.3", features = ["io-util", "sync", "macros", "rt", "rt-multi-thread"] }
uuid = { version = "1.23.1", features = ["v4"] }
