[package]
name = "angos-tx-engine"
version = "0.1.0"
edition = "2024"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

[dependencies]
angos-backoff = { path = "../backoff" }
angos-storage = { path = "../storage" }
async-trait = "0.1.89"
bytes = "1.12.0"
chrono = { version = "0.4.45", features = ["serde"] }
futures-util = { version = "0.3.32", default-features = false }
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
thiserror = "2.0.18"
tokio = { workspace = true, features = ["full"] }
tokio-util = { version = "0.7.18", features = ["io-util", "rt"] }
tracing = "0.1.44"
uuid = { workspace = true, features = ["v4", "serde"] }

[dependencies.redis]
version = "1.2.4"
features = ["tokio-comp"]
optional = true

[features]
redis = ["dep:redis"]
test-util = []

[dev-dependencies]
# Self-reference so the integration tests (compiled as external crates) see
# the feature-gated test-util surface.
angos-tx-engine = { path = ".", features = ["test-util"] }
angos-storage = { path = "../storage", features = ["test-util"] }
tokio = { workspace = true, features = ["full", "macros", "rt-multi-thread"] }
