[package]
name = "angos-tx-engine"
version = "0.1.0"
edition = "2024"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

[features]
default = ["memory-lock"]
memory-lock = []
redis-lock = ["dep:redis"]
s3-lock = []
test-util = ["memory-lock"]

[dependencies]
angos-backoff = { workspace = true }
angos-storage = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
futures-util = { workspace = true }
hex = { workspace = true }
redis = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["rt"] }
tracing = { workspace = true }
uuid = { workspace = true, features = ["serde"] }

[dev-dependencies]
# Self-reference so the integration tests (compiled as external crates) see
# the feature-gated test-util surface and every lock backend under test.
angos-tx-engine = { workspace = true, features = ["test-util", "s3-lock"] }
angos-storage = { workspace = true, features = ["test-util"] }
tokio = { workspace = true, features = ["full", "macros", "rt-multi-thread"] }
